Disable update_all_oldconfig in disable_debug script.  Done already in ot-kernel eclass and using the function may switch back to gcc.

--- a/sys-kernel/ot-sources/files/disable_debug_v1.2.1
+++ b/sys-kernel/ot-sources/files/disable_debug_v1.2.1
@@ -161,7 +161,7 @@ update_all_disable() {
 }
 
 update_all_oldconfig() {
-#	yes "" | make ARCH=${DD_FLAVOR} oldconfig
+	# Bring .config up to date before modifying .config.
 	make ARCH=${DD_FLAVOR} olddefconfig
 }
 
@@ -171,7 +171,7 @@ main() {
 	export DD_FLAVOR=$(grep -r -e "Kernel Configuration" "./.config" \
 		| cut -f 2 -d " " \
 		| cut -f 2 -d "/")
-	update_all_oldconfig
+	#update_all_oldconfig
 	update_all_disable
 }
 
