Updated ot-kernel-pkgflags eclass

--- a/sys-kernel/ot-sources/files/disable_debug_v1.4.1
+++ b/sys-kernel/ot-sources/files/disable_debug_v1.4.1
@@ -98,6 +98,7 @@ strip_debug_from_config() {
 		$(grep -r -e "CONFIG.*KUNIT" "$targetconfig" | grep "^CONFIG_")
 		$(grep -r -e "CONFIG.*TEST" "$targetconfig" | grep "^CONFIG_")
 		$(grep -r -e "CONFIG.*TRACE" "$targetconfig" | grep "^CONFIG_")
+		$(grep -r -e "CONFIG.*TRACING" "$targetconfig" | grep "^CONFIG_")
 		$(grep -r -e "CONFIG.*VERBOSE" "$targetconfig" | grep "^CONFIG_")
 
 		$(grep -r -e "^config " $(find . -name "Kconfig.debug") | cut -f 2 -d ":" | cut -f 2 -d " " | sort)
